Fixed layout on all visible pages

--- a/app/assets/stylesheets/beapp/_global.scss
+++ b/app/assets/stylesheets/beapp/_global.scss
@@ -170,6 +170,14 @@ global styles
   margin-bottom: 0px !important;
 }
 
+.ptop-50 {
+  padding-top: 50px !important;
+}
+
+.ptop-70 {
+  padding-top: 70px !important;
+}
+
 .pbottom-70 {
   padding-bottom: 70px !important;
 }
